--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
 //    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'com.okta.spring:okta-spring-boot-starter:2.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.flywaydb:flyway-core'
@@ -39,6 +40,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.boot:spring-boot-test'
     testCompile platform("org.spockframework:spock-bom:2.0-M1-groovy-2.5")
 
     implementation 'io.r2dbc:r2dbc-h2:0.8.4.RELEASE'
@@ -53,6 +55,8 @@ test {
     //useJUnit {
         // includeCategories 'mx.gps.graphqlsqpr.api.UnitTest'
     //}
+
+    //Your Okta Domain: https://dev-6053964.okta.com  user: gg2020@yopmail.com
 }
 
 sourceSets {
