--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,6 +21,7 @@ spring:
       resourceserver:
         jwt:
           issuerUri: https://dev-6053964.okta.com/oauth2/default
+          jwk-set-uri: https://dev-6053964.okta.com/oauth2/default/v1/keys
 
 
 okta:
@@ -28,3 +29,5 @@ okta:
     client-secret: AIew68aO_XNNYIcoaX-qm6hRPM_p-O2lm36r-316
     client-id: 0oaqsdj57s80mcWr85d6
     issuer: https://dev-6053964.okta.com/oauth2/default
+    groups-claim: roles
+
