--- a/src/test/resources/application-module-test.yaml
+++ b/src/test/resources/application-module-test.yaml
@@ -6,3 +6,10 @@ spring:
   flyway:
     url: jdbc:h2:file:~/test
     enabled: true
+
+logging:
+  level:
+    org:
+      springframework:
+        transaction:
+          interceptor: DEBUG
